# ffetch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  build.rs  flake.nix  hk.pkl  justfile  lefthook.yml  mise.toml  release-plz.toml
.copr/: Makefile
.github/workflows/: aur.yml  ci.yml  crates-io-publish.yml  homebrew-completions.yml  package-linux.yml  release-plz.yml  release.yml  winget.yml
ascii/distros/: debian.txt  endeavouros.txt  fedora.txt  freebsd.txt  garuda.txt  macos.txt  netbsd.txt  nixos.txt  openbsd.txt  ubuntu.txt  windows.txt
benches/: probes.rs
completions/: _purr  purr.bash  purr.fish  purr.ps1
docs/: neofetch-parity.md  os-support.md
examples/: gen-completions.rs  gen-man.rs
man/: purr.1
packaging/: README.md
packaging/alpine/: APKBUILD
packaging/aur/purr-bin/: .SRCINFO  PKGBUILD
packaging/aur/purr-git/: .SRCINFO  PKGBUILD
packaging/rpm/: purrfetch.spec
scripts/: bench-compare.sh  demo-config.toml  gen-svg.sh
src/: ascii.rs  cli.rs  colour.rs  config.rs  lib.rs  main.rs  probe.rs  version.rs
src/ascii/: colors.rs
src/renderer/: image.rs  json.rs  macchina.rs  mod.rs  neofetch.rs
src/renderer/macchina/: ascii.rs  mod.rs
src/renderer/neofetch/: ascii.rs  mod.rs
wix/: main.wxs
