[package]
name = "ffetch"
version = "0.1.0"
edition = "2024"
authors = ["justin13888 <20733699+justin13888@users.noreply.github.com>"]
description = "Fast, featureful, cross-platform fetching tool written in Rust "
readme = "README.md"
repository = "https://github.com/justin13888/ffetch"
homepage = "https://github.com/justin13888/ffetch"
license = "MIT"
keywords = ["system", "cli", "fetch"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffetch_lib"
path = "src/lib.rs"

[[bin]]
name = "ffetch"
path = "src/main.rs"

[[bench]]
name = "probes"
harness = false

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
directories = "6.0.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
lazy_static = "1.5.0"
libmacchina = { version = "8.1.0", features = ["version"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = { version = "0.37.2", features = ["debug", "serde"] }
thiserror = "2.0.18"
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-chrome = { version = "0.7", optional = true }
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
    "local-time",
] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[features]
openwrt = ["libmacchina/openwrt"]
profile = ["dep:tracing-chrome"]
