[package]
name = "purrfetch"
version = "0.1.0"
edition = "2024"
authors = ["justin13888 <20733699+justin13888@users.noreply.github.com>"]
description = "Fast, featureful, cross-platform fetching tool written in Rust "
readme = "README.md"
repository = "https://github.com/justin13888/purrfetch"
homepage = "https://github.com/justin13888/purrfetch"
license = "MIT"
keywords = ["system", "cli", "fetch"]
publish = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "justin13888/homebrew-tap"
# Homebrew formula/command name. The crate publishes as `purrfetch` (the crates.io
# name), but the binary and Homebrew formula are `purr` (`brew install …/tap/purr`).
formula = "purr"
# Publish jobs to run in CI (push the generated formula to the tap above)
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Extra files to bundle in every release archive (the man page; regenerate with `mise run man`)
include = ["man/purr.1"]

[lib]
name = "purr_lib"
path = "src/lib.rs"

[[bin]]
name = "purr"
path = "src/main.rs"

[[bench]]
name = "probes"
harness = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.28"
directories = "6.0.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
lazy_static = "1.5.0"
libmacchina = { version = "8.1.0", features = ["version"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = { version = "0.37.2", features = ["debug", "serde"] }
thiserror = "2.0.18"
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-chrome = { version = "0.7", optional = true }
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
    "local-time",
] }

[dev-dependencies]
# Renders `man/purr.1` from the clap CLI; see `examples/gen-man.rs`.
clap_mangen = "0.2.30"
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
openwrt = ["libmacchina/openwrt"]
profile = ["dep:tracing-chrome"]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.16.0"
