[package]
name = "purrfetch"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["justin13888 <20733699+justin13888@users.noreply.github.com>"]
description = "Fast, featureful, cross-platform fetching tool written in Rust"
readme = "README.md"
repository = "https://github.com/justin13888/purrfetch"
homepage = "https://github.com/justin13888/purrfetch"
license = "MIT"
keywords = ["system", "cli", "fetch"]
publish = true

[package.metadata.wix]
upgrade-guid = "18828CE8-1773-4003-849C-300ADEC18B80"
path-guid = "4B2EC565-91AD-463B-AFA1-EAA5C297362A"
license = false
eula = false

# Debian/Ubuntu package, built with `cargo deb` (see .github/workflows/package-linux.yml).
# The package is `purrfetch`; the installed command is `purr`. Runtime deps are
# auto-derived from the binary via dpkg-shlibdeps ($auto).
[package.metadata.deb]
maintainer = "justin13888 <20733699+justin13888@users.noreply.github.com>"
copyright = "2026 justin13888"
license-file = ["LICENSE", "0"]
extended-description = "Fast, neofetch-compatible system information tool written in Rust. Prints a neofetch-style report with parallel probes. The installed command is `purr`."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/purr", "usr/bin/", "755"],
    ["man/purr.1", "usr/share/man/man1/", "644"],
    ["completions/purr.bash", "usr/share/bash-completion/completions/purr", "644"],
    ["completions/_purr", "usr/share/zsh/site-functions/_purr", "644"],
    ["completions/purr.fish", "usr/share/fish/vendor_completions.d/purr.fish", "644"],
    ["README.md", "usr/share/doc/purrfetch/README.md", "644"],
]

# RPM package, built with `cargo generate-rpm` (see package-linux.yml). This is a
# convenience .rpm attached to releases (download + `dnf install`); the Fedora
# COPR repo builds from source via packaging/rpm/purrfetch.spec instead.
# auto_req = "builtin" derives library deps from the ELF, so it works on the
# (Ubuntu) CI host without rpm's find-requires.
[package.metadata.generate-rpm]
summary = "Fast, neofetch-compatible system information tool"
auto_req = "builtin"
assets = [
    { source = "target/release/purr", dest = "/usr/bin/purr", mode = "0755" },
    { source = "man/purr.1", dest = "/usr/share/man/man1/purr.1", mode = "0644", doc = false },
    { source = "completions/purr.bash", dest = "/usr/share/bash-completion/completions/purr", mode = "0644" },
    { source = "completions/_purr", dest = "/usr/share/zsh/site-functions/_purr", mode = "0644" },
    { source = "completions/purr.fish", dest = "/usr/share/fish/vendor_completions.d/purr.fish", mode = "0644" },
    { source = "LICENSE", dest = "/usr/share/licenses/purrfetch/LICENSE", mode = "0644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/purrfetch/README.md", mode = "0644", doc = true },
]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "justin13888/homebrew-tap"
# Homebrew formula/command name. The crate publishes as `purrfetch` (the crates.io
# name), but the binary and Homebrew formula are `purr` (`brew install …/tap/purr`).
formula = "purr"
# Publish jobs to run in CI (push the generated formula to the tap above)
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# The msi's wix/main.wxs is hand-edited (installs purr.ps1 alongside the binary),
# so tell dist not to expect a pristine generated file.
allow-dirty = ["msi"]
# Extra files to bundle in every release archive (the man page and shell
# completions; regenerate with `mise run man` / `mise run completions`)
include = ["man/purr.1", "completions"]

[lib]
name = "purr_lib"
path = "src/lib.rs"

[[bin]]
name = "purr"
path = "src/main.rs"

[[bench]]
name = "probes"
harness = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.28"
directories = "6.0.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
lazy_static = "1.5.0"
libmacchina = { version = "8.1.0", features = ["version"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = { version = "0.37.2", features = ["debug", "serde"] }
thiserror = "2.0.18"
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-chrome = { version = "0.7", optional = true }
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
    "local-time",
] }

[dev-dependencies]
# Renders `man/purr.1` from the clap CLI; see `examples/gen-man.rs`.
clap_mangen = "0.2.30"
# Renders the static shell completions in `completions/`; see `examples/gen-completions.rs`.
clap_complete = "4.5"
criterion = { version = "0.8.2", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
openwrt = ["libmacchina/openwrt"]
profile = ["dep:tracing-chrome"]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.16.0"
